--- a/package.json
+++ b/package.json
@@ -7,12 +7,21 @@
 		"build": "prisma generate && next build",
 		"start": "next start",
 		"lint": "next lint",
-    "postinstall": "prisma generate"
+		"postinstall": "prisma generate"
 	},
 	"dependencies": {
 		"@auth/core": "^0.37.4",
 		"@auth/prisma-adapter": "^2.7.4",
+		"@hookform/resolvers": "^3.10.0",
+		"@radix-ui/react-avatar": "^1.1.3",
+		"@radix-ui/react-dialog": "^1.1.6",
+		"@radix-ui/react-dropdown-menu": "^2.1.6",
+		"@radix-ui/react-label": "^2.1.2",
+		"@radix-ui/react-select": "^2.1.6",
+		"@radix-ui/react-separator": "^1.1.2",
 		"@radix-ui/react-slot": "^1.1.2",
+		"@radix-ui/react-toast": "^1.2.6",
+		"@radix-ui/react-tooltip": "^1.1.8",
 		"@t3-oss/env-nextjs": "^0.12.0",
 		"@vercel/postgres": "^0.10.0",
 		"class-variance-authority": "^0.7.1",
@@ -20,24 +29,30 @@
 		"lucide-react": "^0.474.0",
 		"next": "15.1.6",
 		"next-auth": "^5.0.0-beta.25",
+		"next-themes": "^0.4.4",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
+		"react-hook-form": "^7.54.2",
 		"tailwind-merge": "^3.0.1",
 		"tailwindcss-animate": "^1.0.7",
 		"zod": "^3.24.1"
 	},
 	"devDependencies": {
 		"@eslint/eslintrc": "^3",
+		"@eslint/js": "^9.19.0",
 		"@prisma/client": "^6.3.1",
 		"@types/node": "^20",
 		"@types/react": "^19",
 		"@types/react-dom": "^19",
-		"eslint": "^9",
+		"eslint": "^9.19.0",
 		"eslint-config-next": "15.1.6",
+		"eslint-plugin-react": "^7.37.4",
+		"globals": "^15.14.0",
 		"postcss": "^8",
 		"prisma": "^6.3.1",
 		"tailwindcss": "^3.4.1",
 		"tsx": "^4.19.2",
-		"typescript": "^5"
+		"typescript": "^5",
+		"typescript-eslint": "^8.23.0"
 	}
 }
