--- a/package.json
+++ b/package.json
@@ -11,8 +11,6 @@
 		"postinstall": "prisma generate"
 	},
 	"dependencies": {
-		"@auth/core": "^0.37.4",
-		"@auth/prisma-adapter": "^2.7.4",
 		"@hookform/resolvers": "^3.10.0",
 		"@radix-ui/react-avatar": "^1.1.3",
 		"@radix-ui/react-dialog": "^1.1.6",
@@ -27,13 +25,13 @@
 		"@t3-oss/env-nextjs": "^0.12.0",
 		"@vercel/postgres": "^0.10.0",
 		"bcryptjs": "^2.4.3",
+		"better-auth": "^1.1.16",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"date-fns": "^3.6.0",
 		"lodash": "^4.17.21",
 		"lucide-react": "^0.474.0",
 		"next": "15.1.6",
-		"next-auth": "^5.0.0-beta.25",
 		"next-themes": "^0.4.4",
 		"react": "^19.0.0",
 		"react-day-picker": "^8.10.1",
