--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
 		"start": "next start",
 		"lint": "eslint .",
 		"lint:fix": "eslint . --fix",
-		"postinstall": "prisma generate"
+		"postinstall": "prisma generate",
+		"prepare": "next-ws patch"
 	},
 	"dependencies": {
 		"@hookform/resolvers": "^3.10.0",
+		"@monaco-editor/react": "^4.7.0",
 		"@radix-ui/react-avatar": "^1.1.3",
 		"@radix-ui/react-dialog": "^1.1.6",
 		"@radix-ui/react-dropdown-menu": "^2.1.6",
@@ -29,17 +31,23 @@
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"date-fns": "^3.6.0",
+		"html-react-parser": "^5.2.2",
 		"lodash": "^4.17.21",
 		"lucide-react": "^0.474.0",
 		"next": "15.1.6",
 		"next-themes": "^0.4.4",
+		"next-ws": "^2.0.0",
+		"pusher": "^5.2.0",
+		"pusher-js": "^8.4.0",
 		"react": "^19.0.0",
 		"react-day-picker": "^8.10.1",
 		"react-dom": "^19.0.0",
 		"react-hook-form": "^7.54.2",
+		"react-resizable-panels": "^2.1.7",
 		"redis": "^4.7.0",
 		"tailwind-merge": "^3.0.1",
 		"tailwindcss-animate": "^1.0.7",
+		"ws": "^8.18.0",
 		"zod": "^3.24.1"
 	},
 	"devDependencies": {
@@ -51,6 +59,7 @@
 		"@types/node": "^20",
 		"@types/react": "^19",
 		"@types/react-dom": "^19",
+		"@types/ws": "^8.5.14",
 		"eslint": "^9.20.0",
 		"eslint-config-next": "^15.1.6",
 		"eslint-plugin-import": "^2.31.0",
