--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
 	},
 	"dependencies": {
 		"@hookform/resolvers": "^3.10.0",
-		"@monaco-editor/react": "^4.7.0",
 		"@radix-ui/react-avatar": "^1.1.3",
 		"@radix-ui/react-dialog": "^1.1.6",
 		"@radix-ui/react-dropdown-menu": "^2.1.6",
@@ -31,12 +30,11 @@
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"date-fns": "^3.6.0",
-		"html-react-parser": "^5.2.2",
+		"dompurify": "^3.2.4",
 		"lodash": "^4.17.21",
 		"lucide-react": "^0.474.0",
 		"next": "15.1.6",
 		"next-themes": "^0.4.4",
-		"next-ws": "^2.0.0",
 		"pusher": "^5.2.0",
 		"pusher-js": "^8.4.0",
 		"react": "^19.0.0",
@@ -47,7 +45,6 @@
 		"redis": "^4.7.0",
 		"tailwind-merge": "^3.0.1",
 		"tailwindcss-animate": "^1.0.7",
-		"ws": "^8.18.0",
 		"zod": "^3.24.1"
 	},
 	"devDependencies": {
