--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "postinstall": "prisma generate",
-    "migrate:local": "tsx src/lib/migrateToLocal.ts"
+    "migrate:local": "tsx src/lib/migrateToLocal.ts",
+    "start:local": "docker compose up -d && next dev"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.0",
     "@hookform/resolvers": "^3.10.0",
     "@radix-ui/react-alert-dialog": "^1.1.6",
     "@radix-ui/react-avatar": "^1.1.3",
@@ -32,6 +34,7 @@
     "@radix-ui/react-tooltip": "^1.1.8",
     "@t3-oss/env-nextjs": "^0.12.0",
     "@vercel/postgres": "^0.10.0",
+    "axios": "^1.8.4",
     "bcryptjs": "^2.4.3",
     "better-auth": "^1.1.16",
     "class-variance-authority": "^0.7.1",
@@ -53,6 +56,7 @@
     "react-hook-form": "^7.54.2",
     "react-resizable-panels": "^2.1.7",
     "react-syntax-highlighter": "^15.6.1",
+    "recharts": "^2.15.1",
     "redis": "^4.7.0",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
